Feature/FCS-226/list of vents (#17)
* Capture vents application info (add another pattern)

* Add vents unit tests (copy paste from flares code)